# MirrorWe

./: .env_example  .gitignore  Makefile  README.md  citation.cff  init_data.sh  pyproject.toml
core/: memory.py  person.py  personality.py  registry.py
doc/: FRIEND_GENERATION_SUMMARY.md  example_usage.py
generator/: friend_generator.py
mirror/: __init__.py  cli.py  main.py  reorganize.py
mirror/actor/: __init__.py  agent_input.md  bad_doll.md  base.py  doll.md  doll.py  format_person.md  green_doll.md  group_input.md  helper.py  private_doll.md
mirror/actor/group/: __init__.py  evolution.md  input.md  self.md  worker.py
mirror/actor/private/: __init__.py  input.md  worker.py
mirror/core/: __init__.py  group.py  inner.py  memory.py  person.py  personality.py  relationship.py  topic.py  topic_classifier.py  we.py
mirror/experimental/: relationship.py
mirror/primitive/: __init__.py  db.py  json_parser.py  limitter.py  llm.py  metaclass.py  token.py  utils.py
mirror/prompt/: __init__.py  classify_topic.md  compact.md  friend_bio.md  group_bio.md  me.md  summary_bio.md
mirror/tool/: __main__.py
mirror/tool/circle/: __init__.py  get_circle.md  get_circle_detail.md  get_circle_list.md  sns_comment.md  sns_praise.md  sns_send.md
mirror/tool/contact/: __init__.py  get_contact.md  list_friend_in_group.md  list_group.md  (+2 more)
mirror/wechat/: README.md  __init__.py  api.py  api_circle.py  api_contact.py  api_manage.py  api_message.py  cookie.py  helper.py  message.py  proxy.py  reorganize.py
primitive/: llm.py
resource/: example_bio.md
test/: bio.list  mv_bio.py  test_circle.py  test_contact.py  test_env_config.py  test_factory_core.py  test_kosong.py  test_message.py  test_tool_contact.py  test_tool_search.py  test_we_factory.py  test_we_factory_simple.py
tools/: executor.py  main.py  notifier.py  task.py
wechat/: README.md  proxy.py  reorganize.py
wkteam/: wechat.py
(+12 files in other folders)
